feat: working on items management
